# lora-captioner

./: .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  PLAN.md  README.md  pyproject.toml  requirements-florence.txt  requirements.txt
docs/research/: captioning-strategies.md  system-prompts.md  vllm-models-comparison.md
src/lora_captioner/: __init__.py  __main__.py  captioner.py  cli.py  image_processor.py  model_manager.py  utils.py
tests/: __init__.py  test_image_processor.py
